Improved expression optimization